# homework_lesson_18

./: conftest.py  pyproject.toml
api/: cart_api.py
pages/: cart_page.py
services/: cart_api.py
tests/: test_cart_of_demoshop.py
ui/: cart_methods.py
utils/: allure_helper.py
